# pcl_tutorials

./: README.md
clustering/cluster_extraction/: CMakeLists.txt
clustering/cluster_extraction/src/: cluster_extraction.cpp
clustering/dbscan/: CMakeLists.txt
clustering/dbscan/data/output/: cloud_color.pcd  cloud_corepts.pcd
clustering/dbscan/src/: dbscan.cpp
convert_type/: CMakeLists.txt
convert_type/src/: obj2pcd.cpp  obj2ply.cpp  obj2vtk.cpp  pcd2ply.cpp  pcd2vtk.cpp  ply2pcd.cpp  ply2vtk.cpp  vtk2obj.cpp  vtk2pcd.cpp  vtk2ply.cpp
data/: readme.txt
data/kinect_robot/: world_filtered.pcd
filtering/bare_earth/: CMakeLists.txt
filtering/bare_earth/src/: bare_earth.cpp
filtering/extract_indices/: CMakeLists.txt  theory.txt
filtering/extract_indices/src/: extract_indices.cpp
filtering/passthrough/: CMakeLists.txt
filtering/passthrough/src/: passthrough.cpp
filtering/project_inliers/: CMakeLists.txt
filtering/project_inliers/src/: project_inliers.cpp
filtering/remove_outliers/: CMakeLists.txt
filtering/remove_outliers/src/: conditional_removal.cpp  remove_outliers.cpp
filtering/statistical_removal/: CMakeLists.txt
filtering/statistical_removal/src/: statistical_removal.cpp
filtering/voxel_grid/: CMakeLists.txt
filtering/voxel_grid/src/: voxel_grid.cpp
practice/: CMakeLists.txt
practice/data/output/: cloud_projected_0.pcd  cloud_projected_1.pcd  cloud_projected_2.pcd  cloud_projected_3.pcd  cloud_projected_4.pcd  cloud_projected_5.pcd  cloud_projected_6.pcd  cloud_projected_7.pcd  inlier_1.pcd  inlier_2.pcd  inlier_3.pcd  inlier_4.pcd  inlier_5.pcd  inlier_6.pcd  inlier_7.pcd  world_filtered_segmen_cpp.pcd
practice/data/output/inlier/cpp/: in_1.pcd  in_2.pcd  in_3.pcd  in_4.pcd  in_5.pcd  in_6.pcd  in_7.pcd  in_8.pcd  in_9.pcd
practice/data/output/inlier/py/: in_0.pcd  in_1.pcd  in_2.pcd  in_3.pcd  in_4.pcd  in_5.pcd  in_6.pcd  in_7.pcd  in_8.pcd  in_9.pcd
practice/data/output/outlier/cpp/: rest_6.pcd  rest_7.pcd  rest_8.pcd  rest_9.pcd
practice/data/output/outlier/py/: rest_2.pcd  rest_3.pcd  rest_4.pcd  rest_5.pcd  rest_6.pcd  rest_7.pcd  rest_8.pcd
practice/src/: open3d_segmen.cpp  pcl_process.cpp  pcl_process.py  pcl_process_segmen_manually.cpp  random_forest.cpp  ransac_segmen.cpp  rotating_calipers.cpp  rotating_calipers.h  test_colormap.cpp  utils.cpp  utils.h
surface/convex_hull_2d/: CMakeLists.txt
surface/convex_hull_2d/src/: convex_hull_2d.cpp
